--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ background-color: transparent;
 
 @media screen and (min-width:768px) {
     .burger-btn {
-        display: none;
+     display: none;
     }
    .menu {
     display: flex;
@@ -143,95 +143,98 @@ background-color: transparent;
     align-items: center;
    }
        
-        .main-logo {
-         font-family: 'Raleway', sans-serif;
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-         text-transform: uppercase;
-        color: #4d5ae5;
-        padding: 24px 0;
-        margin-right: 120px;
-        }
-        .main-nav {
-            display: flex;
-            align-items: center;
-        }
-         .nav-link {
-         display: block;
-         font-size: 16px;
-        line-height: 1.5;
-         letter-spacing: 0.02em;
-         font-weight: 500;
-        padding: 24px 0;
-         position: relative;
-        color: #2e2f42;; 
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-          }
+   .main-logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+    padding: 24px 0;
+    margin-right: 120px;
+   }
 
-          .nav-link::after {
-              content: '';
-              position: absolute;
-              bottom: -1px;
-              border-radius: 2px;
-              left: 0;
-              width: 100%;
-              height: 4px;
-              background-color: #404bbf;
-              opacity: 0;
-              transform: scaleX(0);
-              transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+   .main-nav {
+    display: flex;
+    align-items: center;
+   }
+
+    .nav-link {
+    display: block;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    font-weight: 500;
+    padding: 24px 0;
+    position: relative;
+    color: #2e2f42;; 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     }
+
+     .nav-link::after {
+     content: '';
+     position: absolute;
+     bottom: -1px;
+     border-radius: 2px;
+     left: 0;
+     width: 100%;
+     height: 4px;
+     background-color: #404bbf;
+     opacity: 0;
+     transform: scaleX(0);
+     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
                   opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-          }
+    }
 
-                  .nav-link:hover,
-                  .nav-link:focus,
-                  .nav-link.active {
-                      color: #404bbf;
-                  }
-        .nav-link:hover::after,
-        .nav-link:focus::after,
-        .nav-link.active::after {
-            opacity: 1;
-            transform: scaleX(1);
-        }
-        .contact-info {
-            font-style: normal;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
-        }
+     .nav-link:hover,
+     .nav-link:focus,
+     .nav-link.active {
+      color: #404bbf;
+    }
 
-        .contact-message {
-            font-weight: 400;
-            font-size: 12px;
-            line-height: 1.17;
-            letter-spacing: 0.04em;
-            color: #434455;
-            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        .contact-info :hover,
-        .contact-info :focus,
-        .contact-info :active {
-            color: #404bbf;
-        }
+     .nav-link:hover::after,
+     .nav-link:focus::after,
+     .nav-link.active::after {
+      opacity: 1;
+      transform: scaleX(1);
+    }
+
+    .contact-info {
+     font-style: normal;
+     display: flex;
+     flex-direction: column;
+     gap: 12px;
+     }
+     .contact-message {
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 1.17;
+     letter-spacing: 0.04em;
+     color: #434455;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     }
+     .contact-info :hover,
+     .contact-info :focus,
+     .contact-info :active {
+     color: #404bbf;
+     }
 } 
 
 @media screen and (min-width:1158px) {
     .main-logo {
-            margin-right: 76px;
-        }
-        .contact-info {
-            flex-direction: row;
-            align-items: center;
-            gap: 40px;
-        }
-        .contact-message {
-            font-size: 16px;
-            line-height: 1.5;
-            letter-spacing: 0.02em;
-        }
+      margin-right: 76px;
+     }
+     .contact-info {
+     flex-direction: row;
+     align-items: center;
+     gap: 40px;
+     }
+     .contact-message {
+     font-size: 16px;
+     line-height: 1.5;
+     letter-spacing: 0.02em;
+     }
 }
 
 /* #endregion header */
@@ -466,3 +469,104 @@ font-style: normal;
 }
 }
 /* #endregion hero */
+
+/* #region benefits */
+
+.container-svg {
+    display: none;
+}
+
+.benefits {
+    padding: 96px 0;
+}
+
+.strategy-list-section {
+     background-color: #FFFFFF;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;
+     gap: 72px;
+}
+
+.strategy-list {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
+    text-align: center;
+}
+
+.strategy-item {
+    font-weight: 500;
+    font-size: 16px;
+    color: #434455;
+}
+
+p {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+    
+     .strategy-list-section {
+       background-color: #FFFFFF;
+       display: flex;
+       gap: 24px;
+}
+    .strategy-list-section {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 72px;
+        flex-direction: row;        
+    }
+        .strategy-list {
+            text-align: left;
+        }
+     .strategy {
+         width: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .benefits {
+         padding: 120px 0
+        }
+
+     .strategy-list-section {
+         gap: 24px;
+         flex-direction: row;
+         }
+    .strategy-list {
+         font-weight: 500;
+         font-size: 20px;
+         line-height: 1.2;
+         letter-spacing: 0.02em;
+        }
+    .strategy-item {
+      font-weight: 400;
+    }
+    .container-svg {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         height: 112px;
+         background-color: #f4f4fd;
+         border-radius: 4px;
+         border: 1px solid #8e8f99;
+         margin-bottom: 8px;
+        }
+    .strategy {
+        width: calc((100% - 72px) / 4);
+         }
+  }
+
+/* #endregion benefits */
+
+/* #region team */
+
+/* #endregion team */
