--- a/css/styles.css
+++ b/css/styles.css
@@ -123,9 +123,9 @@ button {
 }
 
 .burger-btn {
-padding: 0;
-border: none;
-background-color: transparent;
+   padding: 0;
+   border: none;
+   background-color: transparent;
 }
 
 .burger-icon {
@@ -387,6 +387,7 @@ font-style: normal;
     background-size: cover;
     margin: 0 auto;
 }
+
 @media (min-resolution: 192dpi) {
     .page {
         background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero-m@2x.jpg);
@@ -420,11 +421,6 @@ font-style: normal;
     flex-direction: column;
     margin: 0 auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover,
-.button:focus {
-    background-color: #404bbf;
 }
 
 @media screen and (min-width: 768px) {
@@ -466,6 +462,10 @@ font-style: normal;
             .page {
                 background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/hero@2x.jpg);
             }
+    .button:hover,
+    .button:focus {
+     background-color: #404bbf;
+    }
 }
 }
 /* #endregion hero */
@@ -742,6 +742,10 @@ p {
     overflow: hidden;
 }
 
+.portfolio-list {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 @media screen and (min-width: 768px) {
     .portfolio-images {
         width: 356px;
@@ -800,7 +804,9 @@ p {
          transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
          transform: translateY(100%);
      }
-
+     .portfolio-list {
+          box-shadow: none
+     }
     .paragraph:hover,
     .paragraph:focus {
          transform: translateY(0%);
@@ -853,7 +859,6 @@ p {
 .container-footer {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding-left: 15px;
@@ -933,11 +938,11 @@ p {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    padding-left: 16px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
     opacity: 0.3;
+    padding: 0 16px;
 }
 
 .input-footer::placeholder {
@@ -971,4 +976,361 @@ p {
     padding-top: 16px;
 } 
 
+
+@media screen and (min-width: 768px) {
+    .container-footer {
+     flex-direction: row;
+     align-items:flex-start;
+     justify-content: flex-start;
+     max-width: 568px;
+    }
+
+    .footer-text {
+     margin-right: 24px;
+     max-width: 264px;
+    }
+
+    .footer-logo {
+     justify-content: flex-start;
+    }
+
+    .copyright {
+     justify-content: flex-start;
+        
+        
+    }
+
+    .paragraph-footer {
+     justify-content: flex-start; 
+     
+    }
+    
+    .footer-form {
+     display: flex;
+     column-gap: 24px;
+     flex-wrap: wrap;
+     flex-direction: row;
+     justify-content: flex-start;
+     align-items: center;
+     width: 100%;
+    }
+
+    .copyright-networks {
+      padding-top: 0px;
+    }
+
+    .input-footer {
+     width: 264px;  
+    }      
+}
+
+@media screen and (min-width: 1158px) {
+    .footer-background {
+         padding: 100px 0;
+    }
+    
+     .container-footer {
+         align-items: baseline;
+         flex-wrap: nowrap;
+         max-width: 1158px;
+    }
+    
+        .footer-text {
+            max-width: 264px;
+            margin-bottom: 16px;
+        } 
+     
+    
+        .logo-paragraph {
+            padding-top: 16px;
+            width: 100%;
+        }
+    
+        .footer-networks-link {
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .footer-networks-link:hover,
+        .footer-networks-link:focus {
+            background-color: #31d0aa;
+        }
+    
+        .subscribe-footer {
+            margin-left: 80px;
+            padding-top: 16px;
+            padding-right: 24px;
+        }
+    
+        .footer-form {
+            flex-wrap: nowrap;
+            gap: 24px;
+        }
+    
+        .input-footer::placeholder {
+            opacity: 1;
+        }
+    
+        .input-footer {
+            width: 264px;
+            opacity: 1;
+        }
+    
+    
+        .button-footer {
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        .copyright-networks {
+            padding-top: 16px;
+        }
+    
+        .button-footer:hover,
+        .button-footer:focus {
+            background-color: #404bbf;
+        }
+    }
 /* #endregion footer */
+
+/* #region popup */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.backdrop.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.hide-popup {
+    opacity: 0;
+}
+
+.popup-review {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 288px;
+    min-height: 623px;
+    background-color: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 16px 24px 16px;
+}
+
+.close-popup {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0; 
+    cursor: pointer;
+}
+
+.popup-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    margin-bottom: 16px;
+}
+
+.field-wrapper {
+    position: relative;
+    margin-bottom: 16px;
+}
+
+.label-field {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.text-field {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 34px;
+    outline: transparent;
+}
+
+.field-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.comment-textarea {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+}
+
+.form-field-wrapper {
+    margin-bottom: 8px;
+}
+
+.policy-label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 24px;
+    display: flex;
+    align-items: center;
+}
+
+.custom-checkbox {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    margin-right: 8px;
+    flex-shrink: 0;
+}
+
+.policy-checkbox:checked+.policy-label .custom-checkbox {
+    background-color: #404bbf;
+    border: none;
+    fill: #404bbf;
+}
+
+.policy-link {
+    color: #4d5ae5;
+}
+
+.button-primary {
+    display: block;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    margin: auto;
+}
+.form-field {
+    margin-bottom: 16px;
+}
+
+.form-wrapper {
+    margin-bottom: 24px;
+}
+
+@media screen and (min-width: 768px) {
+.popup-review {
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+}
+}
+
+@media screen and (min-width: 1158px) {
+.popup-review {
+        width: 408px;
+        min-height: 584px;
+        padding: 72px 24px 24px 24px;
+    }
+
+    .close-popup {
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .close-popup:hover,
+    .close-popup:focus {
+        background-color: #404bbf;
+        border: none;
+        fill: #ffffff;
+    }
+
+    .close-popup-icon {
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .text-field {
+        padding-left: 38px;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .text-field:focus {
+        border-color: #4D5AE5;
+    }
+
+    .field-icon {
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .text-field:focus+.field-icon {
+        fill: #4D5AE5;
+    }
+
+    .comment-textarea {
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .comment-textarea:hover,
+    .comment-textarea:focus {
+        border-color: #4D5AE5;
+    }
+
+    .form-field-wrapper {
+        margin-bottom: 8px;
+    }
+
+    .button-primary {
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .button-primary:hover,
+    .button-primary:focus {
+        background-color: #404bbf;
+    }
+}
+/* #endregion popup */
